--- a/HTML/index.html
+++ b/HTML/index.html
@@ -17,13 +17,13 @@
 
     <script>
         const botaoMensagem = document.querySelector('.botao');
-        let mensagemOriginal = botaoMensagem.textContent; // Guarda a mensagem original
+        let mensagemOriginal = botaoMensagem.textContent; 
 
         botaoMensagem.addEventListener('click', function() {
             if (botaoMensagem.textContent === mensagemOriginal) {
                 botaoMensagem.textContent = 'Bem vindo(a) ao meu trbalho!';
             } else {
-                botaoMensagem.textContent = mensagemOriginal; // Volta para a mensagem original no próximo clique
+                botaoMensagem.textContent = mensagemOriginal; 
             }
         });
     </script>
